added git link into the for nerds section

--- a/meteor-3d.html
+++ b/meteor-3d.html
@@ -85,7 +85,18 @@
           EndEvent('touchend');<br>
         </blockquote>
         </p>
+      </div>
+  </div>
+  <div class="parallax-container">
+    <div class="parallax"></div>
+  </div>
+  <div class="section par-body">
+    <div class="row container">
+      <h5 class="header grey-text-darken-3">Github</h5>
+      <p>There are a few more additions I did to get this example running, but I won't
+      bore you with the details. If you would like to do further tinkering then type
+      <blockquote>git clone https://github.com/JohnRodney/meteor-threejs-hello-world.git</blockquote>
+      into your terminal and have fun hacking.</p>
     </div>
   </div>
-
 </template>
